--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
-title: The last sales CRM you'll ever need
-description: Track and optimize your sales team in real time
+title: Le gestionnaire de marque-pages dont vous avez besoin
+description: Organisez, accédez et partagez l'information
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">The last sales CRM <strong>you'll ever need</strong></h1>
-		<p class="subtext editable">Track and optimize your sales team in real time.</p>
-		<div class="cta button alt"><a href="{{ site.baseurl }}/contact/">Get Started Free</a></div>
+		<h1 class="editable">Le gestionnaire de marque-pages <strong>dont vous avez besoin</strong></h1>
+		<p class="subtext editable">Gérez votre univers numérique librement, gratuitement de n'importe où.</p>
+		<div class="cta button alt"><a href="{{ site.baseurl }}/contact/">Utiliser gratuitement</a></div>
 		<div>
 			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
 		</div>
@@ -17,8 +17,8 @@ description: Track and optimize your sales team in real time
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can we <strong>double</strong> our sales revenue?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources. </p>
+				<h2>Comment <strong>améliorer </strong> l'accès à vos informations?</h2>
+				<p>Mozaic permet de capitaliser toues les ressources dont vous avez besoin. Vous pouvez partager en masse ou dans le détail tous vos marque-pages! </p>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
@@ -55,15 +55,15 @@ description: Track and optimize your sales team in real time
 			<div class="testimonial-block">
 				<div class="square-image"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James" class="editable"></div>
 				<blockquote>
-					<p class="editable">Hydra has shaped the business we have today. We have a repeatable sales process and a strategy to scale our team. I recommend Hydra to any business looking to improve their sales.</p>
-					<p class="editable author">Jim James - CEO of Global Corp.</p>
+					<p class="editable">Mozaic me permet d'organiser tous mes projets, de conserver l'accès à certaines informations nécessaires à mon activité et de partager ce que je veux.</p>
+					<p class="editable author">Henri Lecaye - CEO de Designer Fonctionnel.</p>
 				</blockquote>
 			</div>
 		</div>
 	</section>
 
 	<section class="bottom-cta">
-		<h2 class="editable"><strong>Improve</strong> your sales process today</h2>
-		<div class="button alt"><a href="#">Get Started Free</a></div>
+		<h2 class="editable"><strong>Améliorer</strong> votre organisation et l'accès à votre univers numérique. </h2>
+		<div class="button alt"><a href="#">Utiliser gratuitement!</a></div>
 	</section>
 </div>
