--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ description: Organisez, accédez et partagez l'information
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can I <strong>keep track</strong> of my sales team?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+				<h2>Comment puis-je  <strong>trouver</strong> la meilleure organisation?</h2>
+				<p>Mozaic vous permet d'organiser vos contenus visuellement, trouver et accéder à une ressource en un clic, la partager en deux. </p>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
@@ -41,8 +41,8 @@ description: Organisez, accédez et partagez l'information
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can I <strong>forecast</strong> the next 90 days?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+				<h2>comment  <strong>partager en masse</strong> des informations?</h2>
+				<p>Mozaic vous permet de partager une ou plusieurs ressources en quelques clic, les rendant accessible sur la mozaic de chaque utilisateur inscrit. Le format systématique permet une grande souplesse dans l'utilisation des données. </p>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
