--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ description: Organisez, accédez et partagez l'information
 	<div class="text-container">
 		<h1 class="editable">Le gestionnaire de marque-pages <strong>dont vous avez besoin</strong></h1>
 		<p class="subtext editable">Gérez votre univers numérique librement, gratuitement de n'importe où.</p>
-		<div class="cta button alt"><a href="{{ site.baseurl }}/contact/">Utiliser gratuitement</a></div>
+		<div class="cta button alt"><a href="https://mozaic.link/login">Utiliser gratuitement</a></div>
 		<div>
-			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+			<img src="{{ site.baseurl }}/images/dashboard.png" alt="mozaic le gestionnaire de marque page léger simple efficace" class="screenshot editable" />
 		</div>
 	</div>
 </section>
@@ -64,6 +64,6 @@ description: Organisez, accédez et partagez l'information
 
 	<section class="bottom-cta">
 		<h2 class="editable"><strong>Améliorer</strong> votre organisation et l'accès à votre univers numérique. </h2>
-		<div class="button alt"><a href="#">Utiliser gratuitement!</a></div>
+		<div class="button alt"><a href="https://mozaic.link/login">Utiliser gratuitement!</a></div>
 	</section>
 </div>
