--- a/tarifs-abonnements.html
+++ b/tarifs-abonnements.html
@@ -3,30 +3,30 @@ title: Pricing
 heading: Find the perfect plan for your business
 description: All plans include our award winning sales optimization solution to track your sales in real time.
 pricing_table:
-  - name: Basic
+  - name: Personnelle
     color: "#8e8e8e"
     features:
-      - text: $25 per month
+      - text: $0 per month
         highlight: true
-      - text: Up to 5 users
+      - text: Navigateurs illimité, limite à 50000 enregistrements
         highlight: false
-      - text: Basic lead scoring
+      - text: Consultation, gestion complète, partage en masse par fichiers
         highlight: false
-      - text: CRM
+      - text: Gestionnaire de marque-pages
         highlight: false
-      - text: Basic reporting
+      - text: Gestion personnelle de vos marque-pages sur le web
         highlight: false
-      - text: Sales map
+      - text: Gérer son univers numérique
         highlight: false
     call_to_action:
-      link: http://mysite.com?plan=basic
-      text: Get started
-  - name: Pro
+      link: https://mozaic.link/login
+      text: S'inscrire 
+  - name: Page
     color: "#4a4a4a"
     features:
-      - text: $99 per month
+      - text: $1 par mois
         highlight: true
-      - text: Everything in Basic
+      - text: En plus de l'offre personnelle, gestion d'une page publique de lien
         highlight: false
       - text: Up to 25 users
         highlight: false
@@ -37,12 +37,12 @@ pricing_table:
       - text: Advanced reporting
         highlight: false
     call_to_action:
-      link: http://mysite.com?plan=pro
-      text: Get started
-  - name: Professional
+      link: #
+      text: A venir
+  - name: Professionnel
     color: "#000000"
     features:
-      - text: $299 per month
+      - text: Sur devis
         highlight: true
       - text: Everything in Basic and Pro
         highlight: false
@@ -55,17 +55,17 @@ pricing_table:
       - text: Calendar
         highlight: false
     call_to_action:
-      link: http://mysite.com?plan=professional
-      text: Get started
+      link: /contact
+      text: A venir
 faq:
-  - question: What types of payment do you accept?
-    answer: Credit cards including MasterCard, Visa or American Express.
-  - question: Can I change my plan at a later time?
-    answer: Yes, you can upgrade and downgrade your plan at anytime.
-  - question: Do you offer pricing for nonprofit organizations?
-    answer: Yes, send us a message and we'll set you up on our nonprofit pricing.
-  - question: Questions?
-    answer: Contact us for any further questions at <a href="#">john@business.com</a>.
+  - question: Quels types de paiements accepterez-vous?
+    answer: Credit cards incluant MasterCard, Visa ou American Express, BTC.
+  - question: Puis-je changer d'offre?
+    answer: Oui, n'importe quand et dans n'importe quel sens, upgrade ou downgrade.
+  - question: Avez-vouos des offres pour les associations et toute organisation philanthropique?
+    answer: Oui, envoyez nous un message et nous en discuterons.
+  - question: Des questions?
+    answer: Pour toute question ou autre <a href="#">nfo@mozaic.link</a>.
 ---
 <div class="plans">
 	{% for plan in page.pricing_table %}
@@ -85,7 +85,7 @@ faq:
 </div>
 
 {% if page.faq %}
-	<h2>Pricing FAQ</h2>
+	<h2>FAQ</h2>
 	<dl class="faq">
 		{% for item in page.faq %}
 			<div>
