--- a/tarifs-abonnements.html
+++ b/tarifs-abonnements.html
@@ -28,13 +28,13 @@ pricing_table:
         highlight: true
       - text: En plus de l'offre personnelle, gestion d'une page publique de lien
         highlight: false
-      - text: Up to 25 users
+      - text: -
         highlight: false
-      - text: Advanced lead scoring
+      - text: -
         highlight: false
-      - text: Pipeline management
+      - text: -
         highlight: false
-      - text: Advanced reporting
+      - text: -
         highlight: false
     call_to_action:
       link: #
@@ -44,15 +44,15 @@ pricing_table:
     features:
       - text: Sur devis
         highlight: true
-      - text: Everything in Basic and Pro
+      - text: Installation ou mise à disposition 
         highlight: false
-      - text: Up to 100 users
+      - text: Gestion de pages privées
         highlight: false
-      - text: Campaign builder
+      - text: Politique de publication éditoriale
         highlight: false
-      - text: Machine learning
+      - text: -
         highlight: false
-      - text: Calendar
+      - text: -
         highlight: false
     call_to_action:
       link: /contact
