--- a/tarifs-abonnements.html
+++ b/tarifs-abonnements.html
@@ -10,13 +10,13 @@ pricing_table:
         highlight: true
       - text: Navigateurs illimité, limite à 50000 enregistrements
         highlight: false
-      - text: Consultation, gestion complète, partage en masse par fichiers
+      - text: Accéder en un clic à son contenu
         highlight: false
-      - text: Gestionnaire de marque-pages
+      - text: Gérer tout son univers numérique
         highlight: false
-      - text: Gestion personnelle de vos marque-pages sur le web
+      - text: Partager des ressources en masse
         highlight: false
-      - text: Gérer son univers numérique
+      - text: Consulter avec tous les navigateurs
         highlight: false
     call_to_action:
       link: https://mozaic.link/login
@@ -26,15 +26,15 @@ pricing_table:
     features:
       - text: $1 par mois
         highlight: true
-      - text: En plus de l'offre personnelle, gestion d'une page publique de lien
+      - text: Inclus : offre personnelle
         highlight: false
-      - text: -
+      - text: Gérer une page publique de lien
+        highlight: true
+      - text: .
         highlight: false
-      - text: -
+      - text: .
         highlight: false
-      - text: -
-        highlight: false
-      - text: -
+      - text: .
         highlight: false
     call_to_action:
       link: #
@@ -50,9 +50,9 @@ pricing_table:
         highlight: false
       - text: Politique de publication éditoriale
         highlight: false
-      - text: -
+      - text: .
         highlight: false
-      - text: -
+      - text: .
         highlight: false
     call_to_action:
       link: /contact
