--- a/tarifs-abonnements.html
+++ b/tarifs-abonnements.html
@@ -30,11 +30,11 @@ pricing_table:
         highlight: false
       - text: Gérer une page publique de lien
         highlight: true
-      - text: .
+      - text: xxx
         highlight: false
-      - text: .
+      - text: xxx
         highlight: false
-      - text: .
+      - text: xxx
         highlight: false
     call_to_action:
       link: #
@@ -50,9 +50,9 @@ pricing_table:
         highlight: false
       - text: Politique de publication éditoriale
         highlight: false
-      - text: .
+      - text: xxx
         highlight: false
-      - text: .
+      - text: xxx
         highlight: false
     call_to_action:
       link: /contact
