--- a/tarifs-abonnements.html
+++ b/tarifs-abonnements.html
@@ -1,8 +1,8 @@
 ---
 title: Pricing
-heading: Find the perfect plan for your business
-description: All plans include our award winning sales optimization solution to track your sales in real time.
-pricing_table:
+heading: Trouvez votre l'abonnement dont vous avez besoin 
+description: Toutes les offres vous permettent de gérer vos marque-pages personnellement ou professionnellement.
+Table des offres:
   - name: Personnelle
     color: "#8e8e8e"
     features:
