--- a/pricing.html
+++ b/pricing.html
@@ -21,14 +21,14 @@ Table des offres:
     call_to_action:
       link: https://mozaic.link/login
       text: S'inscrire 
-  - name: Page
+  - name: Page Publique
     color: "#4a4a4a"
     features:
       - text: $1 par mois
         highlight: true
       - text: Inclus : offre personnelle
         highlight: false
-      - text: Gérer une page publique de lien
+      - text: Gérer une page publique de marque-pages
         highlight: true
       - text: xxx
         highlight: false
