--- a/pricing.html
+++ b/pricing.html
@@ -1,71 +1,71 @@
 ---
 title: Pricing
-heading: Trouvez votre l'abonnement dont vous avez besoin 
-description: Toutes les offres vous permettent de gérer vos marque-pages personnellement ou professionnellement.
-Table des offres:
-  - name: Personnelle
+heading: Find the perfect plan for your business
+description: All plans include our award winning sales optimization solution to track your sales in real time.
+pricing_table:
+  - name: Basic
     color: "#8e8e8e"
     features:
-      - text: $0 per month
+      - text: $25 per month
         highlight: true
-      - text: Navigateurs illimité, limite à 50000 enregistrements
+      - text: Up to 5 users
         highlight: false
-      - text: Accéder en un clic à son contenu
+      - text: Basic lead scoring
         highlight: false
-      - text: Gérer tout son univers numérique
+      - text: CRM
         highlight: false
-      - text: Partager des ressources en masse
+      - text: Basic reporting
         highlight: false
-      - text: Consulter avec tous les navigateurs
+      - text: Sales map
         highlight: false
     call_to_action:
-      link: https://mozaic.link/login
-      text: S'inscrire 
-  - name: Page Publique
+      link: http://mysite.com?plan=basic
+      text: Get started
+  - name: Pro
     color: "#4a4a4a"
     features:
-      - text: $1 par mois
+      - text: $99 per month
         highlight: true
-      - text: Inclus : offre personnelle
+      - text: Everything in Basic
         highlight: false
-      - text: Gérer une page publique de marque-pages
-        highlight: true
-      - text: xxx
+      - text: Up to 25 users
         highlight: false
-      - text: xxx
+      - text: Advanced lead scoring
         highlight: false
-      - text: xxx
+      - text: Pipeline management
+        highlight: false
+      - text: Advanced reporting
         highlight: false
     call_to_action:
-      link: #
-      text: A venir
-  - name: Professionnel
+      link: http://mysite.com?plan=pro
+      text: Get started
+  - name: Professional
     color: "#000000"
     features:
-      - text: Sur devis
+      - text: $299 per month
         highlight: true
-      - text: Installation ou mise à disposition 
+      - text: Everything in Basic and Pro
         highlight: false
-      - text: Gestion de pages privées
+      - text: Up to 100 users
         highlight: false
-      - text: Politique de publication éditoriale
+      - text: Campaign builder
         highlight: false
-      - text: xxx
+      - text: Machine learning
         highlight: false
-      - text: xxx
+      - text: Calendar
         highlight: false
     call_to_action:
-      link: /contact
-      text: A venir
+      link: http://mysite.com?plan=professional
+      text: Get started
 faq:
-  - question: Quels types de paiements accepterez-vous?
-    answer: Credit cards incluant MasterCard, Visa ou American Express, BTC.
-  - question: Puis-je changer d'offre?
-    answer: Oui, n'importe quand et dans n'importe quel sens, upgrade ou downgrade.
-  - question: Avez-vouos des offres pour les associations et toute organisation philanthropique?
-    answer: Oui, envoyez nous un message et nous en discuterons.
-  - question: Des questions?
-    answer: Pour toute question ou autre <a href="#">nfo@mozaic.link</a>.
+  - question: What types of payment do you accept?
+    answer: Credit cards including MasterCard, Visa or American Express.
+  - question: Can I change my plan at a later time?
+    answer: Yes, you can upgrade and downgrade your plan at anytime.
+  - question: Do you offer pricing for nonprofit organizations?
+    answer: Yes, send us a message and we'll set you up on our nonprofit pricing.
+  - question: Questions?
+    answer: Contact us for any further questions at <a href="#">john@business.com</a>.
 ---
 <div class="plans">
 	{% for plan in page.pricing_table %}
@@ -85,7 +85,7 @@ faq:
 </div>
 
 {% if page.faq %}
-	<h2>FAQ</h2>
+	<h2>Pricing FAQ</h2>
 	<dl class="faq">
 		{% for item in page.faq %}
 			<div>
