--- a/pricing.html
+++ b/pricing.html
@@ -1,26 +1,26 @@
 ---
 title: Pricing
-heading: Find the perfect plan for your business
-description: All plans include our award winning sales optimization solution to track your sales in real time.
+heading: Trouvez le service dont vous avez besoin
+description: Toutes les offres vous permettent de gérer vos marque-pages personnellement ou professionnellement.
 pricing_table:
   - name: Basic
     color: "#8e8e8e"
     features:
-      - text: $25 per month
+      - text: Gratuit
         highlight: true
-      - text: Up to 5 users
+      - text: Navigateurs illimité, limite à 50 000 enregistrements
         highlight: false
-      - text: Basic lead scoring
+      - text: Accéder en un clic au contenu
         highlight: false
-      - text: CRM
+      - text: Gérer son univers numérique
         highlight: false
-      - text: Basic reporting
+      - text: Partager des ressources en masse
         highlight: false
-      - text: Sales map
+      - text: Consulter avec tous les navigateurs
         highlight: false
     call_to_action:
-      link: http://mysite.com?plan=basic
-      text: Get started
+      link: https://mozaic.link/login
+      text: Inscription
   - name: Pro
     color: "#4a4a4a"
     features:
