--- a/pricing.html
+++ b/pricing.html
@@ -8,7 +8,7 @@ pricing_table:
     features:
       - text: Gratuit
         highlight: true
-      - text: Navigateurs illimité, limite à 50 000 enregistrements
+      - text: Sessions simultanées 
         highlight: false
       - text: Accéder en un clic au contenu
         highlight: false
@@ -24,13 +24,13 @@ pricing_table:
   - name: Pro
     color: "#4a4a4a"
     features:
-      - text: $99 per month
+      - text: €1 par mois
         highlight: true
-      - text: Everything in Basic
+      - text: Inclus : offre Basic
         highlight: false
-      - text: Up to 25 users
+      - text: Gérer une page publique 
         highlight: false
-      - text: Advanced lead scoring
+      - text: Partages personnalisés
         highlight: false
       - text: Pipeline management
         highlight: false
