--- a/pricing.html
+++ b/pricing.html
@@ -24,13 +24,15 @@ pricing_table:
   - name: Pro
     color: "#4a4a4a"
     features:
-      - text: €1 par mois
+      - text: 1 euro par mois
         highlight: true
       - text: Inclus : offre Basic
         highlight: false
       - text: Gérer une page publique 
         highlight: false
       - text: Partages personnalisés
+					   
+				 
         highlight: false
       - text: Pipeline management
         highlight: false
