--- a/pricing.html
+++ b/pricing.html
@@ -24,15 +24,13 @@ pricing_table:
   - name: Pro
     color: "#4a4a4a"
     features:
-      - text: 1 euro par mois
+      - text: $99 per month
         highlight: true
-      - text: Inclus : offre Basic
+      - text: Everything in Basic
         highlight: false
-      - text: Gérer une page publique 
+      - text: Up to 25 users
         highlight: false
-      - text: Partages personnalisés
-					   
-				 
+      - text: Advanced lead scoring
         highlight: false
       - text: Pipeline management
         highlight: false
