--- a/pricing.html
+++ b/pricing.html
@@ -1,18 +1,18 @@
 ---
 title: Pricing
-heading: Trouvez le service dont vous avez besoin
+heading: Trouvez le service dont vous avez besoin 
 description: Toutes les offres vous permettent de gérer vos marque-pages personnellement ou professionnellement.
 pricing_table:
-  - name: Basic
+  - name: Personnelle
     color: "#8e8e8e"
     features:
-      - text: Gratuit
+      - text: $0 per month
         highlight: true
-      - text: Sessions simultanées 
+      - text: Navigateurs illimité, limite à 50000 enregistrements
         highlight: false
-      - text: Accéder en un clic au contenu
+      - text: Accéder en un clic à son contenu
         highlight: false
-      - text: Gérer son univers numérique
+      - text: Gérer tout son univers numérique
         highlight: false
       - text: Partager des ressources en masse
         highlight: false
@@ -20,13 +20,13 @@ pricing_table:
         highlight: false
     call_to_action:
       link: https://mozaic.link/login
-      text: Inscription
-  - name: Pro
+      text: S'inscrire 
+  - name: Page Publique
     color: "#4a4a4a"
     features:
-      - text: $99 per month
+      - text: $1 par mois
         highlight: true
-      - text: Everything in Basic
+      - text: Inclus : offre personnelle
         highlight: false
       - text: Up to 25 users
         highlight: false
