--- a/pricing.html
+++ b/pricing.html
@@ -1,32 +1,32 @@
 ---
 title: Pricing
-heading: Trouvez le service dont vous avez besoin 
-description: Toutes les offres vous permettent de gérer vos marque-pages personnellement ou professionnellement.
+heading: Find the perfect plan for your business
+description: All plans include our award winning sales optimization solution to track your sales in real time.
 pricing_table:
-  - name: Personnelle
+  - name: Basic
     color: "#8e8e8e"
     features:
-      - text: $0 per month
+      - text: $25 per month
         highlight: true
-      - text: Navigateurs illimité, limite à 50000 enregistrements
+      - text: Up to 5 users
         highlight: false
-      - text: Accéder en un clic à son contenu
+      - text: Basic lead scoring
         highlight: false
-      - text: Gérer tout son univers numérique
+      - text: CRM
         highlight: false
-      - text: Partager des ressources en masse
+      - text: Basic reporting
         highlight: false
-      - text: Consulter avec tous les navigateurs
+      - text: Sales map
         highlight: false
     call_to_action:
-      link: https://mozaic.link/login
-      text: S'inscrire 
-  - name: Page Publique
+      link: http://mysite.com?plan=basic
+      text: Get started
+  - name: Pro
     color: "#4a4a4a"
     features:
-      - text: $1 par mois
+      - text: $99 per month
         highlight: true
-      - text: Inclus : offre personnelle
+      - text: Everything in Basic
         highlight: false
       - text: Up to 25 users
         highlight: false
