--- a/pricing.html
+++ b/pricing.html
@@ -3,25 +3,24 @@ title: Pricing
 heading: Find the perfect plan for your business
 description: All plans include our award winning sales optimization solution to track your sales in real time.
 pricing_table:
-  - name: Basic
+  - name: Personnelle
     color: "#8e8e8e"
     features:
-      - text: $25 per month
+      - text: Gratuit
         highlight: true
-      - text: Up to 5 users
+      - text: Navigateurs illimité, limite à 50000 enregistrements
         highlight: false
-      - text: Basic lead scoring
+      - text: Accéder en un clic à son contenu
         highlight: false
-      - text: CRM
+      - text: Gérer tout son univers numérique
         highlight: false
-      - text: Basic reporting
+      - text: Partager des ressources en masse
         highlight: false
-      - text: Sales map
+      - text: Consulter depuis tous les navigateurs
         highlight: false
     call_to_action:
-      link: http://mysite.com?plan=basic
-      text: Get started
-  - name: Pro
+      link: https://mozaic.link/login
+      text: Inscription   - name: Pro
     color: "#4a4a4a"
     features:
       - text: $99 per month
