--- a/pricing.html
+++ b/pricing.html
@@ -1,26 +1,27 @@
 ---
 title: Pricing
-heading: Find the perfect plan for your business
-description: All plans include our award winning sales optimization solution to track your sales in real time.
+heading: Trouvez l'offre dont vous avez besoin 
+description: Toutes les offres vous permettent de gérer vos marque-pages personnellement ou professionnellement.
 pricing_table:
-  - name: Personnelle
+  - name: Basic
     color: "#8e8e8e"
     features:
       - text: Gratuit
         highlight: true
-      - text: Navigateurs illimité, limite à 50000 enregistrements
+      - text: Up to 5 users
         highlight: false
-      - text: Accéder en un clic à son contenu
+      - text: Basic lead scoring
         highlight: false
-      - text: Gérer tout son univers numérique
+      - text: CRM
         highlight: false
-      - text: Partager des ressources en masse
+      - text: Basic reporting
         highlight: false
-      - text: Consulter depuis tous les navigateurs
+      - text: Sales map
         highlight: false
     call_to_action:
-      link: https://mozaic.link/login
-      text: Inscription   - name: Pro
+      link: http://mysite.com?plan=basic
+      text: Get started
+  - name: Pro
     color: "#4a4a4a"
     features:
       - text: $99 per month
