--- a/pricing.html
+++ b/pricing.html
@@ -8,15 +8,15 @@ pricing_table:
     features:
       - text: Gratuit
         highlight: true
-      - text: Up to 5 users
+      - text: Navigateurs illimité, limite à 50000 enregistrements
         highlight: false
-      - text: Basic lead scoring
+      - text: Accéder en un clic à son contenu
         highlight: false
-      - text: CRM
+      - text: Gérer tout son univers numérique
         highlight: false
-      - text: Basic reporting
+      - text: Partager des ressources en masse
         highlight: false
-      - text: Sales map
+      - text: Consulter depuis tous les navigateurs
         highlight: false
     call_to_action:
       link: http://mysite.com?plan=basic
