--- a/pricing.html
+++ b/pricing.html
@@ -19,8 +19,8 @@ pricing_table:
       - text: Consulter depuis tous les navigateurs
         highlight: false
     call_to_action:
-      link: http://mysite.com?plan=basic
-      text: Get started
+      link: https://mozaic.link/login
+      text: Inscription 
   - name: Pro
     color: "#4a4a4a"
     features:
