--- a/pricing.html
+++ b/pricing.html
@@ -8,7 +8,7 @@ pricing_table:
     features:
       - text: Gratuit
         highlight: true
-      - text: Navigateurs illimité, limite à 50000 enregistrements
+      - text: Enregistrer ses marque-pages
         highlight: false
       - text: Accéder en un clic à son contenu
         highlight: false
@@ -24,11 +24,11 @@ pricing_table:
   - name: Pro
     color: "#4a4a4a"
     features:
-      - text: $99 per month
+      - text: €1 per month
         highlight: true
-      - text: Everything in Basic
+      - text: Offre Basic incluse
         highlight: false
-      - text: Up to 25 users
+      - text: Gérer une page publique
         highlight: false
       - text: Advanced lead scoring
         highlight: false
