--- a/pricing.html
+++ b/pricing.html
@@ -24,21 +24,21 @@ pricing_table:
   - name: Pro
     color: "#4a4a4a"
     features:
-      - text: €1 per month
+      - text: €1 par mois
         highlight: true
       - text: Offre Basic incluse
         highlight: false
       - text: Gérer une page publique
         highlight: false
-      - text: Advanced lead scoring
+      - text: Statistiques sur la page
         highlight: false
-      - text: Pipeline management
+      - text: Gestion des marque-pages obsolètes
         highlight: false
-      - text: Advanced reporting
+      - text: Recherche dans les marque-pages
         highlight: false
     call_to_action:
-      link: http://mysite.com?plan=pro
-      text: Get started
+      link: https://mozaic.link/login
+      text: Inscription
   - name: Professional
     color: "#000000"
     features:
