--- a/pricing.html
+++ b/pricing.html
@@ -32,9 +32,9 @@ pricing_table:
         highlight: false
       - text: Statistiques sur la page
         highlight: false
-      - text: Gestion des marque-pages obsolètes
+      - text: Analyser des marque-pages obsolètes
         highlight: false
-      - text: Recherche dans les marque-pages
+      - text: Rechercher dans les marque-pages
         highlight: false
     call_to_action:
       link: https://mozaic.link/login
@@ -42,20 +42,20 @@ pricing_table:
   - name: Professional
     color: "#000000"
     features:
-      - text: $299 per month
+      - text: Sur devis
         highlight: true
-      - text: Everything in Basic and Pro
+      - text: Installation ou exploitation
         highlight: false
-      - text: Up to 100 users
+      - text: Gestion des utilisateurs
         highlight: false
-      - text: Campaign builder
+      - text: Statistiques
         highlight: false
-      - text: Machine learning
+      - text: Machine learning et IA
         highlight: false
-      - text: Calendar
+      - text: Accompagnement
         highlight: false
     call_to_action:
-      link: http://mysite.com?plan=professional
+      link: https://mozaic.link/contact
       text: Get started
 faq:
   - question: What types of payment do you accept?
