--- a/pricing.html
+++ b/pricing.html
@@ -58,14 +58,14 @@ pricing_table:
       link: https://mozaic.link/contact
       text: Get started
 faq:
-  - question: What types of payment do you accept?
-    answer: Credit cards including MasterCard, Visa or American Express.
-  - question: Can I change my plan at a later time?
-    answer: Yes, you can upgrade and downgrade your plan at anytime.
-  - question: Do you offer pricing for nonprofit organizations?
-    answer: Yes, send us a message and we'll set you up on our nonprofit pricing.
+  - question: Quels types de paiements accepterez-vous?
+    answer: Credit cards incluant MasterCard, Visa ou American Express, BTC.
+  - question: Puis-je changer d'offre?
+    answer: Oui, n'importe quand et dans n'importe quel sens, upgrade ou downgrade.
+  - question: Avez-vous des offres pour les associations et toute organisation philanthropique?
+    answer: Oui, envoyez nous un message et nous en discuterons.
   - question: Questions?
-    answer: Contact us for any further questions at <a href="#">john@business.com</a>.
+    answer: Pour toute question ou autre <a href="#">nfo@mozaic.link</a>.
 ---
 <div class="plans">
 	{% for plan in page.pricing_table %}
