--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ description: Organisez, accédez et partagez l'information
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>comment  <strong>partager en masse</strong> des informations?</h2>
+				<h2>Comment  <strong>partager en masse</strong> des informations?</h2>
 				<p>Mozaic vous permet de partager une ou plusieurs ressources en quelques clic, les rendant accessible sur la mozaic de chaque utilisateur inscrit. Le format systématique permet une grande souplesse dans l'utilisation des données. </p>
 			</div>
 			<div class="image">
