--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ description: Organisez, accédez et partagez l'information
 		<p class="subtext editable">Gérez votre univers numérique librement, gratuitement de n'importe où.</p>
 		<div class="cta button alt"><a href="https://mozaic.link/login">Utiliser gratuitement</a></div>
 		<div>
-			<img src="{{ site.baseurl }}/images/dashboard.png" alt="mozaic le gestionnaire de marque page léger simple efficace" class="screenshot editable" />
+			<img src="{{ site.baseurl }}/images/mozaic-bookmark-manager.png" alt="mozaic le gestionnaire de marque page léger simple efficace" class="screenshot editable" />
 		</div>
 	</div>
 </section>
