--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ description: Organisez, accédez et partagez l'information
 		<p class="subtext editable">Gérez votre univers numérique librement, gratuitement de n'importe où.</p>
 		<div class="cta button alt"><a href="https://mozaic.link/login">Utiliser gratuitement</a></div>
 		<div>
-			<img src="{{ site.baseurl }}/images/mozaic-bookmark-manager.png" alt="mozaic le gestionnaire de marque page léger simple efficace" class="screenshot editable" />
+			<img src="{{ site.baseurl }}/images/accueil-mozaic-marque-page.png" alt="mozaic le gestionnaire de marque page léger simple efficace" class="screenshot editable" />
 		</div>
 	</div>
 </section>
@@ -21,7 +21,7 @@ description: Organisez, accédez et partagez l'information
 				<p>Mozaic permet de capitaliser toues les ressources dont vous avez besoin. Vous pouvez partager en masse ou dans le détail tous vos marque-pages! </p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/mozaic-bookmark-manager.png" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
