--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ description: Organisez, accédez et partagez l'information
 				<p>Mozaic vous permet d'organiser vos contenus visuellement, trouver et accéder à une ressource en un clic, la partager en deux. </p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/organisation-de-l-information-mozaic.png" alt="Organisation avec mozaic" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
