--- a/pricing.html
+++ b/pricing.html
@@ -37,8 +37,8 @@ pricing_table:
       - text: Rechercher dans les marque-pages
         highlight: false
     call_to_action:
-      link: https://mozaic.link/login
-      text: Inscription
+      link: #
+      text: A venir
   - name: Professional
     color: "#000000"
     features:
@@ -55,8 +55,8 @@ pricing_table:
       - text: Accompagnement
         highlight: false
     call_to_action:
-      link: https://mozaic.link/contact
-      text: Get started
+      link: #
+      text: A venir
 faq:
   - question: Quels types de paiements accepterez-vous?
     answer: Credit cards incluant MasterCard, Visa ou American Express, BTC.
