--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ description: Organisez, accédez et partagez l'information
 				<p>Mozaic vous permet de partager une ou plusieurs ressources en quelques clic, les rendant accessible sur la mozaic de chaque utilisateur inscrit. Le format systématique permet une grande souplesse dans l'utilisation des données. </p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/code-echange-marque-pages-mozaic.png" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
