--- a/about.html
+++ b/about.html
@@ -1,11 +1,10 @@
 ---
-title: Our team
+title: L'équipe
 description: >-
-  We've built an amazing, fantastic team of developers, marketers, designers and
-  sales people.
+  Nous construisons un outil simple et robuste destiné vous permettre d'organiser votre univers numérique sur le web.
 ---
 
-<p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_staff_members/" class="btn"><strong>&#9998;</strong> Manage Staff members</a></p>
+<!-- <p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_staff_members/" class="btn"><strong>&#9998;</strong> Manage Staff members</a></p> -->
 <ul class="staff">
 	{% for person in site.staff_members %}
 		<li>
