--- a/about.html
+++ b/about.html
@@ -14,3 +14,9 @@ description: >-
 		</li>
 	{% endfor %}
 </ul>
+
+<h1>Le projet Mozaic</h1>
+<h2>Génèse</h2>
+<h2>Code de conduite</h2>
+<h2>Objectifs</h2>
+
