--- a/about.html
+++ b/about.html
@@ -16,18 +16,17 @@ description: >-
 </ul>
 	<section>
 		<div class="container flex">
-			<div class="text editable">
-<h1>Le projet Mozaic</h1>
-<h2>Génèse</h2>
+			<div class="text ">
+<h2>Génèse du projet</h2>
+				<p>Mozaic vous permet d'organiser vos contenus visuellement, trouver et accéder à une ressource en un clic, la partager en deux. </p>
 <h2>Code de conduite</h2>
-<h2>Objectifs</h2>
-
-
-				<h2>Comment puis-je  <strong>trouver</strong> la meilleure organisation?</h2>
 				<p>Mozaic vous permet d'organiser vos contenus visuellement, trouver et accéder à une ressource en un clic, la partager en deux. </p>
 			</div>
-			<div class="image">
-				<img src="{{ site.baseurl }}/images/organisation-de-l-information-mozaic.png" alt="Organisation avec mozaic" class="screenshot editable" />
+			<div class="text ">
+
+<h2>Objectifs</h2>
+
+				<p>Mozaic vous permet d'organiser vos contenus visuellement, trouver et accéder à une ressource en un clic, la partager en deux. </p>
 			</div>
 		</div>
 	</section>
