--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ description: Organisez, accédez et partagez l'information
 		<div class="container flex">
 			<div class="text editable">
 				<h2>Comment puis-je  <strong>trouver</strong> la meilleure organisation?</h2>
-				<p>Mozaic vous permet d'organiser vos contenus visuellement, trouver et accéder à une ressource en un clic, la partager en deux. </p>
+				<p>Mozaic vous permet d'organiser vos contenus visuellement, trouver et accéder à une ressource en un clic, la partager simplement. </p>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/organisation-de-l-information-mozaic.png" alt="Organisation avec mozaic" class="screenshot editable" />
@@ -53,7 +53,7 @@ description: Organisez, accédez et partagez l'information
 	<section class="testimonial">
 		<div class="container flex">
 			<div class="testimonial-block">
-				<div class="square-image"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James" class="editable"></div>
+				<div class="square-image"><img src="https://media.licdn.com/dms/image/v2/C4E03AQGMSx_mFxzGwg/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1517673456138?e=1756944000&v=beta&t=a7GNvwmo9U2vZGLAq7jzIDIi71nl1wal3-DH0mqrlrY" alt="Henri Lecaye" class="editable"></div>
 				<blockquote>
 					<p class="editable">Mozaic me permet d'organiser tous mes projets, de conserver l'accès à certaines informations nécessaires à mon activité et de partager ce que je veux.</p>
 					<p class="editable author">Henri Lecaye - CEO de Designer Fonctionnel.</p>
