--- a/about.html
+++ b/about.html
@@ -18,9 +18,10 @@ description: >-
 		<div class="container flex">
 			<div class="text ">
 <h2>Génèse du projet</h2>
-				<p>Mozaic vous permet d'organiser vos contenus visuellement, trouver et accéder à une ressource en un clic, la partager en deux. </p>
+				<p>Mozaic est née d'un besoin : disposer des marque-pages depuis n'importe où, quelque soit le terminal informatique auquel on accède, où le lieu. </p>
+				<p>Le véhicule le plus naturel pour bénéficier d'un tel service est une page web unique avec tout présenté sous forme d'icônes rangées dans des dossiers et sous dossiers, accessibles en un clic. </p>
 <h2>Code de conduite</h2>
-				<p>Mozaic vous permet d'organiser vos contenus visuellement, trouver et accéder à une ressource en un clic, la partager en deux. </p>
+				<p>La "morale" à laquelle obéit ce service, est celle de la protection de la personne et de ses informations.  </p>
 			</div>
 			<div class="text ">
 
