--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@ description: >-
 				<p>Mozaic est née d'un besoin : disposer des marque-pages depuis n'importe où, quelque soit le terminal informatique auquel on accède, où le lieu. </p>
 				<p>Le véhicule le plus naturel pour bénéficier d'un tel service est une page web unique avec tout présenté sous forme d'icônes rangées dans des dossiers et sous dossiers, accessibles en un clic. </p>
 <h2>Code de conduite</h2>
-				<p>La "morale" à laquelle obéit ce service, est celle de la protection de la personne et de ses informations.  </p>
+				<p>Mettre à disposition un portail d'entrée à la navigation sur le web pour tous les internautes devant accéder à de multiples ressources sur web. <p></p>Dans une version gratuite qui permet de se construire et gérer son univers numérique et donnant accès à certaines ressources au besoin. <p></p>Et proposer des services personnalisés pour améliorer l'accès à l'information sur le web.  </p>
 			</div>
 			<div class="text ">
 
