--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,12 @@
 ---
 title: Contact
-heading: Get in touch today
-description: We'd love to help you improve your sales.
+heading: Restons en contact
+description: Ravi de pouvoir vous répondre pour vous aider dans votre navigation à l'aide de Mosaic
 
 map:
-  latitude: -45.8787605
-  longitude: 170.5027976
-  address: "1 George Street, Dunedin, New Zealand"
+  latitude: 48.85686777018372
+  longitude: 2.3975366710140467
+  address: "32 rue de Bagnolet - 75020 - Paris"
   zoom: 13
 ---
 <div class="map" id="map"></div>
@@ -30,11 +30,11 @@ map:
 	</form>
 
 	<div class="contact-details">
-		<h3 class="editable">Address</h3>
+		<h3 class="editable">Adresse</h3>
 		<address><a target="_blank" href="https://www.google.com/maps/place/{{ page.map.address | url_encode }}">{{ page.map.address | replace: ", ", ", <br>" }}</a></address>
 
 		<h3 class="editable">Email</h3>
-		<p><a href="mailto:support@example.com">support@example.com</a></p>
+		<p><a href="mailto:nfo@mozaic.link">nfo@mozaic.link</a></p>
 	</div>
 </div>
 <p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_staff_members/" class="btn"><strong>&#9998;</strong> Manage Staff members</a></p>
