--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@ description: Ravi de pouvoir vous répondre pour vous aider dans votre navigatio
 map:
   latitude: 48.85686777018372
   longitude: 2.3975366710140467
-  address: "Mosaic / Designer Fonctionnel - 32 rue de Bagnolet - 75020 - Paris"
-  zoom: 13
+  address: "<p>Mosaic / Designer Fonctionnel </p><p> 32 rue de Bagnolet - 75020 - Paris"
+  zoom: 13</p>
 ---
 <div class="map" id="map"></div>
 
