--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@ map:
 	</div>
 </div>
 <p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_staff_members/" class="btn"><strong>&#9998;</strong> Manage Staff members</a></p>
-<ul class="staff">
+<!-- <ul class="staff">
 	{% for person in site.staff_members %}
 		<li>
 			<div class="square-image"><img src="{% include relative-src.html src=person.image_path %}" alt="{{ person.name }}"/></div>
@@ -46,7 +46,7 @@ map:
 			<div class="position">{{ person.position }}</div>
 		</li>
 	{% endfor %}
-</ul>
+</ul> -->
 <script type="text/javascript">
 	window.mapData = {{ page.map | jsonify }};
 
