--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 title: Contact
 heading: Restons en contact
-description: Ravi de pouvoir vous répondre pour vous aider dans votre navigation à l'aide de Mosaic
+description: Ravi de pouvoir vous répondre pour vous assister dans votre navigation depuis Mosaic
 
 map:
   latitude: 48.85686777018372
