--- a/about.html
+++ b/about.html
@@ -22,17 +22,22 @@ description: >-
 				<p>Le véhicule le plus naturel pour bénéficier d'un tel service est une page web unique avec tout présenté sous forme d'icônes rangées dans des dossiers et sous dossiers, accessibles en un clic. </p>
 			</div>
 			<div class="text ">
-		<div class="container flex">
-			<div class="text ">
-<h2>Code de conduite</h2>
-				<p>Mettre à disposition un portail d'entrée à la navigation sur le web pour tous les internautes devant accéder à de multiples ressources sur web. <p>
-				</p>Dans une version gratuite qui permet de se construire et gérer son univers numérique et donnant accès à certaines ressources au besoin, proposer des services personnalisés pour améliorer l'accès à l'information sur le web.  </p>
-			</div>
-			<div class="text ">
 
 <h2>Objectifs</h2>
 
 				<p>Mozaic vous permet d'organiser vos contenus visuellement, trouver et accéder à une ressource en un clic, la partager en deux. </p>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="container flex">
+			<div class="text ">
+
+<h2>Code de conduite</h2>
+				<p>Mettre à disposition un portail d'entrée à la navigation sur le web pour tous les internautes devant accéder à de multiples ressources sur web. <p>
+				</p>Dans une version gratuite qui permet de se construire et gérer son univers numérique et donnant accès à certaines ressources au besoin, proposer des services personnalisés pour améliorer l'accès à l'information sur le web.  </p>
+			
+
 			</div>
 		</div>
 	</section>
