--- a/about.html
+++ b/about.html
@@ -34,8 +34,8 @@ description: >-
 			<div class="text ">
 
 <h2>Code de conduite</h2>
-				<p>Mettre à disposition un portail d'entrée à la navigation sur le web pour tous les internautes devant accéder à de multiples ressources sur web. <p>
-				</p>Dans une version gratuite qui permet de se construire et gérer son univers numérique et donnant accès à certaines ressources au besoin, proposer des services personnalisés pour améliorer l'accès à l'information sur le web.  </p>
+				<p>Mettre à disposition un portail d'entrée à la navigation sur le web pour tous les internautes devant accéder à de multiples ressources sur web. 
+				</p><p>Dans une version gratuite qui permet de se construire et gérer son univers numérique et donnant accès à certaines ressources au besoin, proposer des services personnalisés pour améliorer l'accès à l'information sur le web.  </p>
 			
 
 			</div>
