--- a/about.html
+++ b/about.html
@@ -34,9 +34,14 @@ description: >-
 			<div class="text ">
 
 <h2>Code de conduite</h2>
-				<p>Mettre à disposition un portail d'entrée à la navigation sur le web pour tous les internautes devant accéder à de multiples ressources sur web. 
-				</p><p>Dans une version gratuite qui permet de se construire et gérer son univers numérique et donnant accès à certaines ressources au besoin, proposer des services personnalisés pour améliorer l'accès à l'information sur le web.  </p>
-			
+				<p>Mettre à disposition un portail d'entrée à la navigation sur le web pour tous les internautes devant accéder à de multiples ressources sur web en respectant : 
+				<ul>
+				<li>les utilisateurs, seul un email est nécessaire pour se connecter;</li>
+				<li>leurs données, les marque-pages de tous les utilisateurs sont leur propriété exclusive;</li>
+				<li>l'email, s'il est utilisé, il le sera uniquement pour des communications nécessaires relatives à Mozaic.</li>
+				<li>la version gratuite dans sa version le restera.</li>
+				</ul>
+				
 
 			</div>
 		</div>
