--- a/about.html
+++ b/about.html
@@ -34,15 +34,28 @@ description: >-
 			<div class="text ">
 
 <h2>Code de conduite</h2>
-				<p>Mettre à disposition un portail d'entrée à la navigation sur le web pour tous les internautes devant accéder à de multiples ressources sur web en respectant : 
-				<ul>
-				<li>les utilisateurs, seul un email est nécessaire pour se connecter;</li>
-				<li>leurs données, les marque-pages de tous les utilisateurs sont leur propriété exclusive;</li>
-				<li>l'email, s'il est utilisé, il le sera uniquement pour des communications nécessaires relatives à Mozaic.</li>
-				<li>la version gratuite dans sa version le restera.</li>
-				</ul>
-				
+			</div>
+		</div>
+	</section>
+	
+		<section>
+		<div class="container flex">
+			<div class="text ">
+				<p>les utilisateurs, seul un email est nécessaire pour se connecter;</p>
+			</div>
+			<div class="text ">
+				<p>leurs données, les marque-pages de tous les utilisateurs sont leur propriété exclusive;</p>
+			</div>
+		</div>
+	</section>
 
+		<section>
+		<div class="container flex">
+			<div class="text ">
+				<p>l'email, s'il est utilisé, il le sera uniquement pour des communications nécessaires relatives à Mozaic.</p>
+			</div>
+			<div class="text ">
+				<p>Cette version gratuite le restera.</p>
 			</div>
 		</div>
 	</section>
