--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -1,7 +1,7 @@
 ---
-title: Mentiosn légales
-description: >-
-  This is legal
+layout: page
+title: "Mentions Légales"
+permalink: /mentions-legales/
 ---
 
 <p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_staff_members/" class="btn"><strong>&#9998;</strong> Mentions légales</a></p>
